package sase.evaluation.nfa.lazy.order.cost;

public enum CostModelTypes {
	NONE,
	THROUGHPUT,
	THROUGHPUT_LATENCY,
	SHARING_DEGREE,
}
